<resources>
    <string name="app_name">My News App</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="register_button_value">Register</string>
    <string name="login_button_value">Login</string>
    <string name="register_account_value">Register Account</string>
    <string name="confirm_password_value">Confirm Password</string>
</resources>